More evaluation methodology, development models

--- a/SystemsEngineering.ipynb
+++ b/SystemsEngineering.ipynb
@@ -252,6 +252,7 @@
     "\n",
     "A natural question is how long might the entire project may take?  To figure this out, we need to determine the *critical path* through the schedule. \n",
     "\n",
+    "<a id=\"critical-path\"></a>\n",
     "> **Critical path**: the sequence of dependent tasks in a plan whose total duration is the longest.\n",
     "\n",
     "The critical path can be determined by setting up the tasks as a weighted directed acyclic graph (DAG) and finding the longest (weighted) path.  (Although an algorithm can be used to solve the problem, it is usually easy enough to find the critical path by manual inspection).  Any tasks on the critical path must be completed on schedule in order for the project to be completed on time, whereas non-critical tasks are often allowed some margin of error.   \n",
@@ -397,8 +398,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "\n",
     "### Metrics\n",
     "\n",
     "There are many performance metrics used in robotic systems, and here we describe some of the most common ones in use.\n",
@@ -522,21 +521,36 @@
     "#### Aggregation methods\n",
     "Note that for metrics that are collected over time, from many examples, or along many dimensions, they will need to be aggregated in some way to report a single scalar number.\n",
     "\n",
-    "Max error, MAE, MSE, RMSE.  Confidence intervals.\n",
+    "Max error, MAE, MSE, RMSE.  Confidence intervals.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
+    "### Verification, validation, and continuous development\n",
     "\n",
-    "### Evaluation \n",
+    "<a id=\"cherry-picking\"></a>\n",
+    "Because robot behavior depends on the conditions (scenario, environment, objects) in which it is tested, the value we obtain from a metric evaluation is highly dependent on how these conditions are chosen during the evaluation process.  The aggregate metric that we compute is a *sample* from the range of possible conditions, and so we must be conscious of how we select those conditions.  We can influence the result of a metric in three ways: first by changing the *evaluation domain*, second by changing the *evaluation distribution* over that domain, and third by changing the *evaluation thoroughness*.  If we choose a narrow domain, e.g., picking and placing brightly colored cubes on a table, then our metric (say, 95% success rate) may not generalize to other scenarios, e.g., unloading dishes from a dishwasher.  The distribution of our tests also has a major effect on our numbers.  An autonomous vehicle can work extremely well in highway or suburban streets, but terribly badly in urban streets.  So, if we test our vehicle 99% of the time in easy cases, our company's numbers will look much better. Finally, if we stop testing early because we got the result that we wanted, or perform *cherry-picking* by ignoring or redoing tests that failed, we can also artificially inflate our numbers.  \n",
     "\n",
-    "Domain\n",
+    "TODO: figure showing domains, samples, and pitfalls\n",
     "\n",
-    "Validity\n",
+    "There is enormous pressure on developers to show positive metrics, so a conscientious CEO or project manager should always have a skepticism bias toward reported results.  It is necessary to frequently ask the questions: is the test domain representative of the user's domain?  How well can the behavior generalize from in-domain to out-of-domain conditions?  Are the testing procedures fair and conclusive?  These issues are studied in more depth in *verification & validation* (V & V), which is a formal project phase in certain industries.\n",
     "\n",
-    "Thoroughness\n",
+    "<a id=\"verification\"></a>\n",
+    "> **Verification**: the assessment of whether the component or system fulfill specified design goals. \n",
     "\n",
-    "In- and out- of distribution\n",
+    "This is similar to what we what we have been talking about with system and unit testing, in that verification involves the use of internal development yardsticks. On the other hand, we have validation:\n",
     "\n",
-    "### Analysis\n",
-    "Persistent questions: are our tests representative?  Are they conclusive? When do we stop testing and start redesigning?  How to tell which component was responsible for poor behavior?\n"
+    "<a id=\"validation\"></a>\n",
+    "> **Validation**: the assessment of whether the system fulfills the needs of the customer, user, or stakeholder. \n",
+    "\n",
+    "Ensuring that the system aligns with the user's needs requires getting a sense of those needs before, during, and/or after development process.  Needs can be gathered through both informal means, such as discussions, and formal means, such as user testing.  A *validated metric* is one that correlates strongly with user needs and can be used for internal development.  If the development team verifies that the system satisfies a validated metric, then it can be reasonably assured that the system will users' needs. (Until the user changes their mind, which happens more often than not!)\n",
+    "\n",
+    "Finally, in the real-world, evaluation doesn't happen in a vacuum as a separate phase that starts after development is complete.  It also doesn't tend to happen in *iterative development* fashion, in which development stops, waits for evaluation, and then reacts to the results (an idealization that project managers aspire to but never achieve).  Instead, real development processes and evaluation processes happen in an interleaved, continuous manner.  This leads to a challenging question: *when do we use the results from testing to start debugging a component or even redesigning the system*?  I find that junior students and developers will often be ready to scrap their work and start over after observing a single failure, but that failure might have just been a fluke.  A more extensive evaluation would lead to more conclusive findings, and therefore more confidence in our response.  But evaluation takes time, resources, and imposes risks of damage, so for expediency's sake we should prefer that evaluations be short. \n",
+    "\n",
+    "Another dimension of complexity is deciding how to react to a negative evaluation.  How do we tell which component was responsible for the problem?  Or is it the result of a cascade of errors?  Does the problem require a localized fix to a single component or a more global redesign?  When multiple problems pop up, how do we triage the response to address the most critical problems first?  Better debugging practices, such as extensive logging, regression testing, A/B testing, and simulation testing will provide more information to help developers better assign blame and determine an accurate scope for the fix.\n"
    ]
   },
   {
@@ -545,7 +559,13 @@
    "source": [
     "## Large-team engineering practices\n",
     "\n",
+    "Fred Brooks *The Mythical Man Month*\n",
+    "\n",
     "Dunbar's number\n",
+    "\n",
+    "$O(N^2)$ growth of possible communication channels.\n",
+    "\n",
+    "While hardware engineering may be suited for iterative processes with milestones and phases, software engineering is (for better or for worse) an evolutionary process.  There are often too many \"cooks in the kitchen\" to maintain strict organizational hierarchies, and in fact the most experienced developers have usually been promoted to management and are usually not the ones developing code.  It is essential in any organization to develop software engineering practices to help control entropy and prevent the effort from devolving into chaos.\n",
     "\n",
     "### Development methodologies\n",
     "\n",
@@ -553,15 +573,17 @@
     "\n",
     "Agile: an organizational philosophy that prioritizes frequent changes to adapt to product and customer needs. It deprioritizes systematic long-term planning due to the inability to foresee precise specifications.\n",
     "\n",
+    "V-model: an evolution of the waterfall model in which the steps of project definition and project integration are interleaved with system development.  Moving down the first leg of the V in a V-diagram represents moving attention from user needs to implementation details, and then moving up the second leg of the V represents a return from implementation details back to validation that it satisfies user needs.\n",
+    "\n",
     "### Design documents\n",
     "\n",
     "\n",
     "\n",
     "### Software organization\n",
     "\n",
-    "Code is code, right? \n",
+    "Code is code, right? Nope. You couldn't be more wrong!\n",
     "\n",
-    "You couldn't be more wrong! Organizing code well is the single most important imperative of software engineering.  Code must be iteratively debugged, improved upon, and maintained, and so you and others on your team will need to be able to browse files, read code, identify problem areas, and modify significant parts of your code throughout the lifetime of your project.\n",
+    "Organizing code well is the single most important imperative of software engineering.  Code must be iteratively debugged, improved upon, and maintained, and so you and others on your team will need to be able to browse files, read code, identify problem areas, and modify significant parts of your code throughout the lifetime of your project.\n",
     "\n",
     "Here are some tips to help you start organizing your projects better:\n",
     "\n",
@@ -615,6 +637,8 @@
     "\n",
     "\n",
     "### Software management skills\n",
+    "\n",
+    "Monorepo\n",
     "\n",
     "Github\n",
     "\n",
@@ -670,11 +694,14 @@
     "- [KPI](#kpi) (key performance indicator): a quantifiable measure of a team’s performance, i.e., a human metric. Used by management.\n",
     "- OKR (objectives and key results): used by Google. Similar to KPI, but prioritizes broad goals rather than quantifiable metrics.\n",
     "- [Headroom](#Headroom): hypothetical upper limit of a technical component’s performance under ideal circumstances and with an ideal implementation. *Headroom analysis* simulates those conditions, and can help decide how much to invest in a particular method or implementation.\n",
+    "- [Verification](#verification): Assessing whether the system meets specified design goals.  In contrast to validation, verification is performed with respect to the company's internal design objectives.\n",
+    "- [Validation](#validation): Assessing whether the system meets the needs of its intended users and stakeholders.  In contrast to verification, validation is performed with respect to persons external to the company.\n",
     "- [Development velocity / developer velocity](#A-developers-responsibilities): how \"productive\" a developer can be over a given timeframe.\n",
-    "- [X]ops (e.g., devops, secops, MLops): teams whose goals are aligned to aid in X velocity, e.g., by providing tools, frameworks, guides, etc.\n",
-    "- Critical path: the sequence of dependent activities in a project plan defining the minimum possible time to complete a project\n",
-    "- Waterfall: an organizational philosophy that breaks a project into sequential stages with clearly defined development objectives that must be met before proceeding to the next.\n",
-    "- Agile: an organizational philosophy that prioritizes frequent changes to adapt to product and customer needs. It deprioritizes systematic long-term planning due to the inability to foresee precise specifications.\n",
+    "- [X]ops (e.g., devops, secops, MLops): teams whose goals are aligned to aid in developer velocity in area X, e.g., by providing tools, frameworks, guides, etc.\n",
+    "- [Critical path](critical-path): the sequence of dependent activities in a project plan defining the minimum possible time to complete a project\n",
+    "- [Waterfall](#Development-methodologies): an organizational philosophy that breaks a project into sequential stages with clearly defined development objectives that must be met before proceeding to the next.\n",
+    "- [Agile](#Development-methodologies): an organizational philosophy that prioritizes frequent changes to adapt to product and customer needs. It deprioritizes systematic long-term planning due to the inability to foresee precise specifications.\n",
+    "- [V-model](#Development-methodologies): an evolution of the waterfall model in which in which the steps of project definition and project integration are interleaved with system development.\n",
     "\n",
     "\n",
     "#### Engineering management\n",
@@ -710,8 +737,8 @@
     "- Full-stack developer: a developer whose expertise bridges multiple components rather than specializing in a single component.\n",
     "\n",
     "#### Software engineering pitfalls\n",
-    "- Software / code rot: code losing performance or functionality over long periods of time due to the environment changing around it, e.g., system or library upgrades\n",
-    "- [Leaky abstraction](#Abstraction): A (claimed) abstraction of a component that does not fully describe the component's true behavior, such as side-effects.\n"
+    "- [Leaky abstraction](#Abstraction): A (claimed) abstraction of a component that does not fully describe the component's true behavior, such as side-effects.\n",
+    "- Software / code rot: code losing performance or functionality over long periods of time due to the environment changing around it, e.g., system or library upgrades\n"
    ]
   },
   {
