Typo due to the inverse meanings of resolution.

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -200,7 +200,7 @@
     "the grid, then it is unlikely for the graph to contain a feasible path\n",
     "even if one exists in the continuous space (unless we are lucky and the\n",
     "narrow passage lines up with the grid edges). The solution to this\n",
-    "problem is to increase the resolution of the grid until it is\n",
+    "problem is to reduce the resolution of the grid until it is\n",
     "sufficiently fine to find a path through the narrow passage, as shown below.\n",
     "\n",
     "****************\n",
