--- a/SystemsEngineering.ipynb
+++ b/SystemsEngineering.ipynb
@@ -199,8 +199,8 @@
     "|--------------------------|------------------|\n",
     "| System integration       | User interface development |\n",
     "| Logger development       | User interface testing     |\n",
-    "| Debugging tool development (visualization, metrics, etc) |    |\n",
-    "| Data gathering, machine learning |    |\n",
+    "| Debugging tool development (visualization, metrics, etc) |  Cybersecurity  |\n",
+    "| Data gathering, machine learning |  Application ecosystem integration  |\n",
     "| Iterative development and tuning |    |\n",
     " \n",
     "\n",
