--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -731,10 +731,10 @@
     "\n",
     "Rigid transformations are also invertible, and their inverse is also a\n",
     "rigid transformation:\n",
-    "$$\n",
-    "  \\label{eq:RigidTransformInverse}\n",
+    "\\begin{equation}\n",
     "  T_{(R,\\mathbf{t})} ^{-1} = T_{(R^{T},-R^{T} \\mathbf{t})}\n",
-    "$$\n",
+    "  \\label{eq:RigidTransformInverse}\n",
+    "\\end{equation}\n",
     "where $T_{(R,\\mathbf{t})}(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}$. Proof of this equation will be\n",
     "left as an exercise."
    ]
@@ -1210,13 +1210,13 @@
     "* [Displacement](#Directional-quantities): A vector representing the difference between points.\n",
     "* [Direction](#Directional-quantities): A unit vector that represnts a normalized difference between points or normalized velocity. \n",
     "* [Coordinates](#Vectors-and-coordinates): A collection of numbers representing a point, direction, or displacement quantity relative to some coordinate frame.  \n",
-    "* [Coordinate frame](#2D-coordinate-frames): a collection of an origin point and orthogonal axis vectors (e.g., X, Y, and Z) that may be used to represent points, directions, and displacements as coordinates.\n",
+    "* [Coordinate frame](#2D-coordinate-frames): A collection of an origin point and orthogonal axis vectors (e.g., X, Y, and Z) that may be used to represent points, directions, and displacements as coordinates.\n",
     "* [Linear interpolation](#interpolation): An equation $y(u)$ of constant velocity between points $\\mathbf{p}$ to $\\mathbf{q}$, reaching $\\mathbf{p}$ at $u=0$ and $\\mathbf{q}$ at $u=1$.  The equation is given by $y(u) = (1-u)\\mathbf{p} + u\\mathbf{q}$ or equivalently $y(u) = \\mathbf{p} + u(\\mathbf{q}-\\mathbf{p})$.\n",
     "* [Plane equation](#plane-equation): An equation that is held at any point on an infinite plane. The equation is $\\mathbf{x} \\cdot \\mathbf{n} = c $ where $\\mathbf{x}$ is any point on the plane, $\\mathbf{n}$ is the plane normal, and $c$ is an offset scalar. \n",
-    "* [Rotation](#Rotations-in-2D): an orientation-preserving, orthogonal, linear transform.  Rotations preserve distances between points, that is, $\\|Rx-Ry\\|=\\|x-y\\|$ for all $x$ and $y$.  \n",
+    "* [Rotation](#Rotations-in-2D): An orientation-preserving, orthogonal, linear transform.  Rotations preserve distances between points, that is, $\\|Rx-Ry\\|=\\|x-y\\|$ for all $x$ and $y$.  \n",
     "* [Rotation matrix](#Representation-of-coordinate-frames-and-coordinate-transforms): a 2x2 or 3x3 matrix that represents a rotation.  A rotation matrix is orthogonal and has determinant +1. \n",
-    "* [SO(2)](#so2): the mathematical notation for the space of 2D rotations, called the special orthogonal group.\n",
-    "* [SO(3)](#so3): the mathematical notation for the space of 3D rotations, called the special orthogonal group.\n",
+    "* [SO(2)](#so2): The mathematical notation for the space of 2D rotations, called the special orthogonal group.\n",
+    "* [SO(3)](#so3): The mathematical notation for the space of 3D rotations, called the special orthogonal group.\n",
     "* [Rigid transform](#Rigid-transformations): An affine transform that combines a rotation and a translation.  Like rotations, rigid transform preserves distances between points.\n",
     "* [Homogeneous coordinates](#Homogeneous-coordinate-representations): A way to represent rigid transforms as linear transforms (matrices).  A 3x3 (in 2D) or 4x4 (in 3D) matrix that contains the rotation part in the upper left, and the translation part in the upper right.  Points are then represented with an additional 1 in the (d+1)'th coordinate, and directional quantities are represented with a 0 in this coordinate.\n"
    ]
