--- a/RobotControl.ipynb
+++ b/RobotControl.ipynb
@@ -309,8 +309,8 @@
     "four linear constraints that must be satisfied: $a=0$, $a+b+c+d=1$,\n",
     "$b = 0$, and $b + 2c + 3d = 0$. The solution is $a=0$, $b=0$, $c=3$,\n",
     "$d=-2$, and hence\n",
-    "$$\\theta(u) = \\theta_s + (\\theta_g-\\theta_s)(3u^2 - 2u^3)$$ is a smooth\n",
-    "interpolator known as the Hermite curve.\n",
+    "$$\\theta(u) = \\theta_s + (\\theta_g-\\theta_s)(3u^2 - 2u^3)$$\n",
+    "is a smooth interpolator known as the Hermite curve.\n",
     "\n",
     "The remaining question is how to set the time duration of the curve\n",
     "$t_f$ to maintain velocity and acceleration limits. We define\n",
@@ -318,11 +318,13 @@
     "$$\\dot{\\theta}(t) = \\frac{d}{dt} \\theta(u(t)) = \\theta^\\prime(u(t)) u^\\prime(t) =  (\\theta_g-\\theta_s)(6u - 6u^2) /t_f = 6(\\theta_g-\\theta_s)(t/t_f^2 - t^2/t_f^3)$$\n",
     "This is maximized at $t=t_f/2$, which gives the maximum velocity along\n",
     "the curve as a function of $t_f$\n",
-    "$$v^\\star(t_f) = \\frac{3}{2}(\\theta_g-\\theta_s)/t_f.$$ The acceleration\n",
-    "is $$\\ddot{\\theta}(t) = 6(\\theta_g-\\theta_s)(1/t_f^2 - 2t/t_f^3)$$ which\n",
-    "has maximum absolute value at the endpoints. Hence, the maximum\n",
+    "$$v^\\star(t_f) = \\frac{3}{2}(\\theta_g-\\theta_s)/t_f.$$\n",
+    "The acceleration is\n",
+    "$$\\ddot{\\theta}(t) = 6(\\theta_g-\\theta_s)(1/t_f^2 - 2t/t_f^3)$$\n",
+    "which has maximum absolute value at the endpoints. Hence, the maximum\n",
     "acceleration along the curve is\n",
-    "$$a^\\star(t_f) = 6(\\theta_g-\\theta_s)/t_f^2.$$ It is then a simple\n",
+    "$$a^\\star(t_f) = 6(\\theta_g-\\theta_s)/t_f^2.$$\n",
+    "It is then a simple\n",
     "matter to determine whether the curve is acceleration limited or\n",
     "velocity limited, and then to set $t_f$ appropriately.\n",
     "\n",
@@ -518,18 +520,26 @@
     "accounts for inertial and Coriolis effects during movement. Supposing we\n",
     "have a desired acceleration $\\ddot{q}_D$. If we use inverse dynamics to\n",
     "calculate the necessary torque needed to guide the robot upon this\n",
-    "acceleration: $$\\tau_{ID}(\\ddot{q}) = B(q) \\ddot{q} + C(q,\\dot q) + G(q)\n",
-    "\\label{eq:InverseDynamics}$$ then feeding this torque to the robot will\n",
+    "acceleration:\n",
+    "$$\\tau_{ID}(\\ddot{q}) = B(q) \\ddot{q} + C(q,\\dot q) + G(q)\n",
+    "\\label{eq:InverseDynamics}$$\n",
+    "then feeding this torque to the robot will\n",
     "generate the desired acceleration, assuming no disturbances and modeling\n",
     "errors. There are generally two methods for compensating for error. The\n",
     "first method uses $\\tau_{ID}$ as a feedforward control, combined with a\n",
-    "PID feedback: $$\\tau = \\tau_{ID}(\\ddot{q}_D) + \\tau_{fb}.$$ The second\n",
+    "PID feedback:\n",
+    "$$\\tau = \\tau_{ID}(\\ddot{q}_D) + \\tau_{fb}.$$\n",
+    "\n",
+    "The second\n",
     "method, *computed torque control*, instead computes a desired\n",
     "acceleration as the sum of $\\ddot{q}_D$ with a feedback acceleration:\n",
-    "$$\\ddot{q}_{fb} = - K_P(q-q_D) - K_I I(t) - K_D(\\dot{q}-\\dot{q}_D)$$ The\n",
-    "resulting controller uses the torques computed for the feedforward +\n",
+    "$$\\ddot{q}_{fb} = - K_P(q-q_D) - K_I I(t) - K_D(\\dot{q}-\\dot{q}_D).$$\n",
+    "\n",
+    "The resulting controller uses the torques computed for the feedforward +\n",
     "feedback accelerations:\n",
-    "$$\\tau = \\tau_{ID}(\\ddot{q}_D + \\ddot{q}_{fb}).$$ This approach is\n",
+    "$$\\tau = \\tau_{ID}(\\ddot{q}_D + \\ddot{q}_{fb}).$$\n",
+    "\n",
+    "This approach is\n",
     "appealing because with acceleration being the control variable, the PID\n",
     "constants can be chosen easily so the joint space dynamics are\n",
     "convergent. The main drawback of computed torque control methods is the\n",
@@ -580,8 +590,8 @@
     "$e = x - x_D$ are given by $$\\dot{e} = J \\dot{q} = - J J^T K_P e.$$\n",
     "Hypothesizing the Lyapunov function $V(e) = \\frac{1}{2} e^T K_P e$, we\n",
     "can calculate\n",
-    "$$\\dot{V}(e) = \\frac{\\partial V}{\\partial e}(e)^T \\dot{e}.$$ Under the\n",
-    "observation that $\\frac{\\partial V}{\\partial e}(e) = K_P e$, observe\n",
+    "$$\\dot{V}(e) = \\frac{\\partial V}{\\partial e}(e)^T \\dot{e}.$$\n",
+    "Under the observation that $\\frac{\\partial V}{\\partial e}(e) = K_P e$, observe\n",
     "that $\\dot{V}(e) = -e^T K_P J J^T K_P e$. If $J$ and $K_P$ are\n",
     "nonsingular, then $K_P J J^T K_P$ is a symmetric positive definite\n",
     "matrix, and hence this is a negative definite function, i.e., negative\n",
@@ -594,14 +604,15 @@
     "spring-damper dynamics. Suppose we wish to control the dynamics of the\n",
     "task space coordinate according to the trajectory $x_D(t)$. Then the\n",
     "desired acceleration is\n",
-    "$$\\ddot{x}_{cmd} = -K_P(x-x_D(t)) - K_D(\\dot{x} - \\dot{x}_D) + \\ddot{x}_D(t).\n",
-    "\\label{eq:SpringDamperAcceleration}$$ Computing the time derivative of\n",
+    "$$\\ddot{x}_{cmd} = -K_P(x-x_D(t)) - K_D(\\dot{x} - \\dot{x}_D) + \\ddot{x}_D(t). \\label{eq:SpringDamperAcceleration}$$\n",
+    "Computing the time derivative of\n",
     "the task space mapping twice, we obtain:\n",
     "$$\\ddot{x} = \\frac{d}{d t}(J(q)\\dot{q}) = J(q)\\ddot{q} + \\dot{J}(q)\\dot{q}$$\n",
     "Let us examine how the task space acceleration is affected by task space\n",
     "forces, $f_{cmd}$, such that the resulting torque is\n",
     "$\\tau = J^T f_{cmd}$. For convenience of the expression, we drop the\n",
-    "dependence of several terms on $q$: $$\\begin{split}\n",
+    "dependence of several terms on $q$:\n",
+    "$$\\begin{split}\n",
     "\\ddot{x} &= J(B^{-1}(\\tau - C(q,\\dot{q}) - G) + \\dot{J}\\dot{q} \\\\\n",
     "&= JB^{-1} J^T f_{ext} - JB^{-1} C(q,\\dot{q}) - JB^{-1} G  + \\dot{J}\\dot{q} \n",
     "\\end{split}$$ \n",
@@ -609,7 +620,7 @@
     "that the matrix $\\tilde{B} = (JB^{-1}J^T)^{-1}$ is the effective inertia of the task\n",
     "space coordinate. Multiplying both sides by $\\tilde{B}$ and rearranging,\n",
     "we get\n",
-    "$$\\tilde{B}\\ddot{x} + \\tilde{B}(JB^{-1} C(q,\\dot{q}) - \\dot{J}\\dot{q}) + \\tilde{B}JB^{-1}G =  f_{ext}$$\n",
+    "$$\\tilde{B}\\ddot{x} + \\tilde{B}(JB^{-1} C(q,\\dot{q}) - \\dot{J}\\dot{q}) + \\tilde{B}JB^{-1}G =  f_{ext}.$$\n",
     "\n",
     "If we let\n",
     "$\\tilde{C}(q,\\dot{q}) = \\tilde{B}(JB^{-1} C(q,\\dot{q}) - \\dot{J}\\dot{q})$\n",
@@ -680,8 +691,8 @@
     "of a force sensor should be modeled in detail. Accelerations will be\n",
     "observed as force spikes in the sensed force signal, and changes in the\n",
     "end effector orientation will be observed as a bias in the force signal:\n",
-    "$$f_{sensed} = f_{ext} + f_{gravity} + f_{inertial}\n",
-    "\\label{eq:ForceSensor}$$ The best way to estimate the external force is\n",
+    "$$f_{sensed} = f_{ext} + f_{gravity} + f_{inertial}. \\label{eq:ForceSensor}$$\n",
+    "The best way to estimate the external force is\n",
     "to model the force of gravity and inertia on the sensor by estimating\n",
     "the sensor's orientation and acceleration and subtracting their sum from\n",
     "the sensed force. Orientation and acceleration must be estimated from\n",
@@ -700,8 +711,9 @@
     "Impedance control implements a behavior where the robot's end effector\n",
     "as though it were a mass-spring-damper (MSD) system subjected to an\n",
     "external force (usually without gravity). The equations of an MSD are as\n",
-    "follows: $$\\ddot{x} = M^{-1} (f_{ext} - K (x_D-x) - D \\dot{x}_D)\n",
-    "\\label{eq:MassSpringDamper}$$ with $M$ the mass matrix, $K$ the\n",
+    "follows:\n",
+    "$$\\ddot{x} = M^{-1} (f_{ext} - K (x_D-x) - D \\dot{x}_D) \\label{eq:MassSpringDamper}$$\n",
+    "with $M$ the mass matrix, $K$ the\n",
     "stiffness matrix, and $D$ the damping matrix. For example, a\n",
     "zero-gravity mode sets $K$ and $D$ to 0 and the robot's end effector\n",
     "behaves like a free-floating mass in response to applied forces. To\n",
@@ -810,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -824,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
