--- a/WhatAreDynamicsAndControl.ipynb
+++ b/WhatAreDynamicsAndControl.ipynb
@@ -7245,7 +7245,7 @@
     "The pendulum swing up problem asks to control an actuator with limited\n",
     "torque to drive a pendulum with progressively larger and larger\n",
     "momentum, until it can then reach and stabilize about the vertical\n",
-    "position. The pendulum is assumed to with a point mass at the end of a\n",
+    "position. The pendulum is assumed to consist of a point mass at the end of a\n",
     "bar of length $L$, with the other end fixed to rotate about the origin.\n",
     "The system has a state space of $x=(\\theta,\n",
     "\\omega)$, with $\\theta$ the CCW angle of the mass with respect to the\n",
